--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
     </nav>
     <div class="gallery">
         <div class="card" data-language="English">
-            <img src="card1.jpg" alt="Pokémon Card 1">
+            <img src="https://i.imgur.com/7cGzTCa.jpeg" alt="Pokémon Card 1">
             <div class="card-info">
-                <p>Set: Silver Tempest</p>
-                <p>Card Number: 120/195</p>
+                <p>Set: Paradox Rift</p>
+                <p>Card Number: 126/182</p>
+                <p>Variant: Regular Rare</p>
+                <p>Language: English</p>
+            </div>
+        </div>
+        <div class="card" data-language="English">
+            <img src="https://i.imgur.com/2bwYZNH.jpg" alt="Pokémon Card 2">
+            <div class="card-info">
+                <p>Set: Paradox Rift</p>
+                <p>Card Number: 126/182</p>
                 <p>Variant: Reverse Holo</p>
                 <p>Language: English</p>
             </div>
         </div>
-        <div class="card" data-language="Russian">
-            <img src="card2.jpg" alt="Pokémon Card 2">
-            <div class="card-info">
-                <p>Set: Brilliant Stars</p>
-                <p>Card Number: 45/172</p>
-                <p>Variant: Holo</p>
-                <p>Language: Russian</p>
-            </div>
-        </div>
         <div class="card" data-language="Japanese">
-            <img src="card3.jpg" alt="Pokémon Card 3">
+            <img src="https://i.imgur.com/3LMWm7P.jpg" alt="Pokémon Card 3">
             <div class="card-info">
                 <p>Set: Shiny Star V</p>
                 <p>Card Number: 308/330</p>
