--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button onclick="filterCards('Silver Tempest')">Silver Tempest</button>
         <button onclick="filterCards('Miscellaneous Promotional cards')">Miscellaneous Promotional cards</button>
         <button onclick="filterCards('XY-P Promotional cards')">XY-P Promotional cards</button>
-        <!-- Add more buttons as needed -->
+        <!-- add more when needed -->
     </div>
 
 
@@ -205,7 +205,7 @@
             </div>
         </div>
         <div class="card in-collection" data-set="XY-P Promotional cards" data-date="2016-04-16" onclick="openVariants('modal13')">
-            <img src="https://archives.bulbagarden.net/media/upload/thumb/3/30/JirachiXYPromo67a.jpg/429px-JirachiXYPromo67a.jpg" alt="Card 2">
+            <img src="https://i.imgur.com/6YnxUAX.jpeg" alt="Card 2">
             <div class="card-details">
                 <h3>Jirachi</h3>
                 <p>XY-P Promotional cards</p>
