--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <button onclick="filterCards('all')">All Sets</button>
         <button onclick="filterCards('Paradox Rift')">Paradox Rift</button>
         <button onclick="filterCards('Silver Tempest')">Silver Tempest</button>
+        <button onclick="filterCards('Legends Awakened')">Legends Awakened</button>
         <button onclick="filterCards('EX Deoxys')">EX Deoxys</button>
         <button onclick="filterCards('EX Hidden Legends')">EX Hidden Legends</button>
         <button onclick="filterCards('Miscellaneous Promotional cards')">Miscellaneous Promotional cards</button>
@@ -719,13 +720,13 @@
                     <span>0/1</span>
                 </div>
             </div>
-            <div class="card not-incollection" data-set="Legends Awakened" data-date="2008-08-20" onclick="openVariants('modal113')">
+            <div class="card not-incollection" data-set="Legends Awakened" data-date="2011-02-08" onclick="openVariants('modal113')">
                 <img src="https://metatcg.com/cdn/shop/products/pkm_placeholder_39bb0d83-4225-4358-b44f-d0fd1b750916_300x.png?v=1709919746" alt="Card 2">
                 <div class="card-details">
                     <h3>Jirachi LV.42</h3>
                     <p>호수의 기적</p>
                     <p>Korean</p>
-                    <p>Release Date: 2008-08-20</p>
+                    <p>Release Date: 2011-02-08</p>
                 </div>
                 <div class="variant-count">
                     <i class="stack-icon"></i>
