--- a/index.html
+++ b/index.html
@@ -730,10 +730,108 @@
                 </div>
                 <div class="variant-count">
                     <i class="stack-icon"></i>
+                    <span>0/?</span>
+                </div>
+            </div>
+
+
+            <!-- Rising Rivals -->
+
+            <div class="card in-collection" data-set="Rising Rivals" data-date="2008-12-26" onclick="openVariants('modal113')">
+                <img src="https://i.imgur.com/qFuUIpk.jpeg" alt="Card 2">
+                <div class="card-details">
+                    <h3>Jirachi LV.39</h3>
+                    <p>時の果ての絆</p>
+                    <p>Japanese</p>
+                    <p>Release Date: 2008-12-26</p>
+                </div>
+                <div class="variant-count">
+                    <i class="stack-icon"></i>
+                    <span>1/2</span>
+                </div>
+            </div>
+            <div class="card in-collection" data-set="Rising Rivals" data-date="2009-05-16" onclick="openVariants('modal113')">
+                <img src="https://i.imgur.com/YuUstol.jpeg" alt="Card 2">
+                <div class="card-details">
+                    <h3>Jirachi LV.39</h3>
+                    <p>Rising Rivals</p>
+                    <p>English</p>
+                    <p>Release Date: 2009-05-16</p>
+                </div>
+                <div class="variant-count">
+                    <i class="stack-icon"></i>
+                    <span>1/2</span>
+                </div>
+            </div>
+            <div class="card not-incollection" data-set="Rising Rivals" data-date="2009-05-16" onclick="openVariants('modal113')">
+                <img src="https://metatcg.com/cdn/shop/products/pkm_placeholder_39bb0d83-4225-4358-b44f-d0fd1b750916_300x.png?v=1709919746" alt="Card 2">
+                <div class="card-details">
+                    <h3>Jirachi LV.39</h3>
+                    <p>Rivaux Émergeants</p>
+                    <p>French</p>
+                    <p>Release Date: 2009-05-16</p>
+                </div>
+                <div class="variant-count">
+                    <i class="stack-icon"></i>
+                    <span>0/2</span>
+                </div>
+            </div>
+            <div class="card not-incollection" data-set="Rising Rivals" data-date="2009-05-16" onclick="openVariants('modal113')">
+                <img src="https://metatcg.com/cdn/shop/products/pkm_placeholder_39bb0d83-4225-4358-b44f-d0fd1b750916_300x.png?v=1709919746" alt="Card 2">
+                <div class="card-details">
+                    <h3>Jirachi LV.39</h3>
+                    <p>Aufstieg der Rivalen</p>
+                    <p>German</p>
+                    <p>Release Date: 2009-05-16</p>
+                </div>
+                <div class="variant-count">
+                    <i class="stack-icon"></i>
+                    <span>0/2</span>
+                </div>
+            </div>
+            <div class="card not-incollection" data-set="Rising Rivals" data-date="2009-05-16" onclick="openVariants('modal113')">
+                <img src="https://metatcg.com/cdn/shop/products/pkm_placeholder_39bb0d83-4225-4358-b44f-d0fd1b750916_300x.png?v=1709919746" alt="Card 2">
+                <div class="card-details">
+                    <h3>Jirachi LV.39</h3>
+                    <p>L'Ascesa dei Rivali</p>
+                    <p>Italian</p>
+                    <p>Release Date: 2009-05-16</p>
+                </div>
+                <div class="variant-count">
+                    <i class="stack-icon"></i>
                     <span>0/2</span>
                 </div>
             </div>
 
+            <!-- Unleashed-->
+
+            <!-- Call Of Legends-->
+
+            <!-- Plasema blast-->
+
+            <!-- Roaring Skies -->
+
+            <!-- XY Promos [Should be 3, 1 done earlier]-->
+
+            <!--Generations-->
+
+            <!--XY Promos xy112, xy 195-->
+
+            <!-- SM-P Promo-->
+
+            <!-- Shining Legends -->
+
+            <!-- Team up -->
+
+            <!-- Celestial Storm -->
+
+            <!-- Unified minds-->
+
+            <!-- Vivid Voltage-->
+
+            <!-- Stral Radiance -->
+             <!-- SWSH Promo-->
+              <!-- Silver tempest-->
     </div>
     
 
