--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
             <!-- SM-P_Promo_89 -->
             <!-- Shining Legends 1/1/1/1/1/1   1/1/1/1/1-->
 
-            <!-- Team up -->
+            <!-- Team up  1/1/1/1/1/1 1/1/1/1/1/1-->
 
             <!-- Celestial Storm -->
 
